k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goalixa
  namespace: goalixa-goalixa
spec:
  selector:
    app: goalixa
  ports:
    - name: http
      port: 80
      targetPort: http
